--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "lodash": "^4.17.10",
     "ng-recaptcha": "^3.0.5",
+    "ngx-moment": "^2.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
